Cleanup package.yaml

--- a/package.yaml
+++ b/package.yaml
@@ -1,23 +1,10 @@
 name:                Tron
 version:             0.1.0.0
-github:              "githubuser/Tron"
+github:              De3up/Tron
 license:             BSD3
-author:              "Author name here"
+author:              Timofey Gorlov
 maintainer:          "example@example.com"
-copyright:           "2018 Author name here"
-
-extra-source-files:
-- README.md
-- ChangeLog.md
-
-# Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
-
-# To avoid duplicated efforts in documentation and dealing with the
-# complications of embedding Haddock markup inside cabal files, it is
-# common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/Tron#readme>
+copyright:           2018 Timofey Gorlov
 
 dependencies:
 - base >= 4.7 && < 5
@@ -25,15 +12,14 @@ dependencies:
 library:
   source-dirs: src
 
-executables:
-  Tron-exe:
-    main:                Main.hs
-    source-dirs:         app
-    ghc-options:
+executable:
+  main:                Main.hs
+  source-dirs:         app
+  ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    dependencies:
+  dependencies:
     - Tron
 
 tests:
@@ -41,8 +27,8 @@ tests:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - Tron
+      - Tron
