--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,23 @@
-dist
-dist-*
-cabal-dev
-*.o
-*.hi
-*.chi
-*.chs.h
-*.dyn_o
-*.dyn_hi
+.cabal-sandbox/
+.ghc.environment.*
 .hpc
 .hsenv
-.cabal-sandbox/
-cabal.sandbox.config
-*.prof
-*.aux
-*.hp
-*.eventlog
+.HTF/
 .stack-work/
+*.aux
+*.chi
+*.chs.h
+*.dyn_hi
+*.dyn_o
+*.eventlog
+*.hi
+*.hp
+*.o
+*.prof
+/Tron.cabal
+cabal-dev
 cabal.project.local
 cabal.project.local~
-.HTF/
-.ghc.environment.*
+cabal.sandbox.config
+dist
+dist-*
